# Collection-and-Push-of-Information-from-WeChat-Official-Accounts

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_source_article_processing_status.py  0003_source_article_processing_status_check.py  0004_ops_job_runs.py
config/: accounts.example.yml
docs/: web-design-system.md  web-ops-runbook.md
docs/superpowers/plans/: 2026-06-23-market-info-local-validation-plan.md  2026-07-02-market-info-ops-mvp-plan.md  2026-07-02-market-info-ops-task10-13-plan.md  2026-07-02-market-info-ops-task7-9-plan.md
scripts/: smoke_extract_articles.py  smoke_ingest_account.py  smoke_web_console.py
src/market_info/: cli.py  config.py
src/market_info/web/: app.py  (+3 more)
tests/: test_article_ingestor.py  test_article_preprocessor.py  test_cli.py  test_config.py  test_email_sender.py  test_embedding_client.py  test_evaluation.py  test_excel_report.py  test_extractor_schema.py  test_matcher.py  test_models_import.py  test_project_extractor.py  test_project_merge.py  test_rule_score.py  test_semantic_text.py  test_smoke_scripts.py  test_url_normalizer.py  test_vector_search.py  test_web_account_service.py  test_web_app.py  test_web_article_service.py  test_web_dashboard_service.py  test_web_delivery_service.py  test_web_job_history_service.py  test_web_job_runner.py  test_web_project_service.py  test_web_quality_service.py  test_web_report_service.py  test_web_review_service.py  test_web_security.py  test_wechat_exporter_client.py  test_weekly_job.py
(+57 files in other folders)
