[project]
name = "market-info-auto-collector"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "apscheduler>=3.10",
  "fastapi>=0.115",
  "httpx>=0.27",
  "jinja2>=3.1",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "pgvector>=0.3",
  "psycopg[binary]>=3.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0",
  "rapidfuzz>=3.9",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "respx>=0.21",
  "freezegun>=1.5",
]

[project.scripts]
market-info = "market_info.cli:app"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
